<resources>
    <string name="app_name">MyViewAndViews</string>
    <string name="content_text">K-popmerch is Korea based Global Sales Company.We Mainly sell KPOP Merch and High quality Korean products.Ships from Korea, Republic of, 100% Authentic Product.We Carefully pack and ship all your orders after double check.We not only ship goods but also serve the best service to satisfy our customers!Officially distted Brand New &amp; Factory Sealed product.Minor scratches and discoloration of the case can not be exchanged or returned.
    </string>
    <string name="_6_photos">6 Photos</string>
    <string name="stock_hanya_5_buah">Stock hanya 5 buah</string>
    <string name="spesifikasi">Spesifikasi</string>
    <string name="dijual_oleh">Dijual oleh</string>
    <string name="buy">Beli</string>
    <string name="kategori">Kategori</string>
    <string name="lighstick_exo_ver_2">Lighstick EXO ver.2</string>
    <string name="berat">Berat</string>
    <string name="_500_gram">500 gram</string>
    <string name="barang">Barang</string>
    <string name="random_photocard">Lightstick EXO version 2\nRandom Photocard\nBaterai\nGantungan Lightstick\nLetter</string>
    <string name="sm_entertaiment">SM Entertaiment</string>
</resources>